FIXED: z-index of 999

--- a/src/shared/Navbar/Navbar.css
+++ b/src/shared/Navbar/Navbar.css
@@ -6,7 +6,7 @@ nav {
   top: 0;
   width: 100vw;
   overflow: hidden;
-  z-index: 1;
+  z-index: 999;
   background-color: #313846;
   box-shadow: 0 0 18px 0.5px rgba(0, 0, 0, 0.8) !important;
 }
